# settler-oss

./: .env.example  .gitignore  AGENTS_settler.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  GETTING_STARTED.md  GOVERNANCE.md  OSS_SCOPE.md  PRIVATE_REPO_WORKFLOW_TEMPLATE.yml  PRODUCT_BOUNDARIES.md  README.md  SECURITY.md  SUPPORT.md  VERSIONING.md  package-lock.json  package.json  pnpm-workspace.yaml
.github/: COMMUNITY.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  governance_or_process.yml  question.yml
.github/workflows/: accept-sync.yml  auto-sync-oss.yml  ci.yml  release-settler-engine.yml  rust-verify.yml  verify-settler-engine.yml  wasm-build.yml
apps/console/: package.json
apps/web/: .eslintrc.json  next.config.js  package.json
archive/: README.md
contracts/: CHANGELOG.md  README.md
crates/settler-verify-wasm/: Cargo.toml
crates/settler-verify-wasm/src/: lib.rs
docs/: ADVERSARIAL_FAQ.md  ARCHITECTURE.md  AUDIT_READINESS.md  BOUNDARY_MAP.md  BUSINESS_CONTINUITY.md  CLOUD_VS_OSS.md  DETERMINISM.md  EXTERNAL_REVIEW_REPORT.md  FIVE_YEAR_SURVIVABILITY.md  GUARANTEES.md  INDEX.md  INVARIANTS.md  ISSUE_AND_PR_LABELS.md  LICENSING.md  LONG_TERM_SUPPORT.md  MAINTAINER_RESPONSE_POLICY.md  NEXT_30_DAYS.md  OSS_AUDIT_RUBRIC.md  OSS_VS_ENTERPRISE_BOUNDARY.md  PRE_LAUNCH_CHECKLIST.md  QUICKSTART_10MIN.md  README.md  RELEASING.md  REPO_MAP.md  STACK_AGNOSTICITY.md  THREAT_MODEL.md
scripts/: check-boundaries.ts  classify-oss.sh  settler-engine.mjs  sync-to-oss.sh  verify-docs.mjs
(+236 files in other folders)
